<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="GVL_ADS" Id="{a93533ec-eaab-44cd-935f-0838255ad80b}">
    <Declaration><![CDATA[VAR_GLOBAL
	stAdsCom : AdsCom;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>